<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2014 The CyanogenMod Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="empty" translatable="false"></string>

    <string name="app_name" translatable="false">OnePlus Parts</string>

    <!-- Buttons -->
    <string name="buttons_title">Buttons</string>

    <string name="buttons_swap_title">Swap buttons</string>
    <string name="buttons_swap_description">Swap the order of Back and Recents buttons</string>

    <string name="buttons_slider_category">Notification slider</string>
    <string name="buttons_slider_position_top">Top position</string>
    <string name="buttons_slider_position_middle">Middle position</string>
    <string name="buttons_slider_position_bottom">Bottom position</string>
    <string name="buttons_slider_dialog_title">Action</string>
    <string name="buttons_slider_dialog_option_total_silence">Total silence</string>
    <string name="buttons_slider_dialog_option_priority_only">Priority only</string>
    <string name="buttons_slider_dialog_option_vibration">Vibration</string>
    <string name="buttons_slider_dialog_option_none">None</string>

    <!-- Touchscreen gestures -->
    <string name="tgestures_title">Touchscreen gestures</string>
    <string name="tgestures_description">Perform touchscreen gestures for quick actions</string>

    <string name="tgestures_camera_title">Camera</string>
    <string name="tgestures_camera_description">Draw a circle to activate camera</string>

    <string name="tgestures_flashlight_title">Flashlight</string>
    <string name="tgestures_flashlight_description">Draw a \'V\' to toggle flashlight</string>

    <string name="tgestures_music_title">Music</string>
    <string name="tgestures_music_description">Use gestures to control music playback:\n
    • Draw a \'||\' to play/pause\n
    • Draw a \'&#60;\' for previous track\n
    • Draw a \'&#62;\' for next track</string>

    <string name="tgestures_preferences_category">Preferences</string>
    <string name="tgestures_haptic_feedback_title">Haptic feedback</string>
    <string name="tgestures_haptic_feedback_description">Vibrate when a touchscreen gesture is detected</string>

</resources>
