<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License"
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="buttons_swap"
        android:title="@string/buttons_swap_title"
        android:summary="@string/buttons_swap_description" />

    <PreferenceCategory android:title="@string/buttons_slider_category">

        <ListPreference
            android:key="buttons_slider_position_top"
            android:dialogTitle="@string/buttons_slider_dialog_title"
            android:title="@string/buttons_slider_position_top"
            android:summary="%s"
            android:entries="@array/notification_slider_action_entries"
            android:entryValues="@array/notification_slider_action_entry_values" />

        <ListPreference
            android:key="buttons_slider_position_middle"
            android:dialogTitle="@string/buttons_slider_dialog_title"
            android:title="@string/buttons_slider_position_middle"
            android:summary="%s"
            android:entries="@array/notification_slider_action_entries"
            android:entryValues="@array/notification_slider_action_entry_values" />

        <ListPreference
            android:key="buttons_slider_position_bottom"
            android:dialogTitle="@string/buttons_slider_dialog_title"
            android:title="@string/buttons_slider_position_bottom"
            android:summary="%s"
            android:entries="@array/notification_slider_action_entries"
            android:entryValues="@array/notification_slider_action_entry_values" />

    </PreferenceCategory>

</PreferenceScreen>
